Update README.md
- added bug instructions
- made sure license file and license here match
- formatted

whats next: 
-make sure the image files load properly
-the links work properly
- the license file was uploaded to git